--- a/Collector/res/layout/activity_container.xml
+++ b/Collector/res/layout/activity_container.xml
@@ -9,8 +9,18 @@
     tools:context=".ContainerActivity" >
 
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
+
+    <Button
+        android:id="@+id/buttonPhotoActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_below="@+id/textView1"
+        android:layout_marginTop="20dp"
+        android:text="Button" />
 
 </RelativeLayout>
